--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/
 spring.datasource.username=
 spring.datasource.password=
+
+#port
+server.port=80
+
+#MyBatis Mapper
+mybatis.type-aliases-package=com.pandora.lms.dto
+mybatis.mapper-locations=static/mapper/*.xml
+
+# JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
