--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=
 server.port=80
 
 #MyBatis Mapper
-mybatis.type-aliases-package=com.pandora.lms.dto
+mybatis.type-aliases-package=com.devrun.dto
 mybatis.mapper-locations=static/mapper/*.xml
 
 # JPA
