--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #DB
-spring.datasource.url=jdbc:mariadb://localhost:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://43.202.61.143:3306/devrundevdb
+spring.datasource.username=ioio
+spring.datasource.password=ioio
 
 #port
 server.port=80
