--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// OAuth 2.0
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+	// Webclient
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	// https://mvnrepository.com/artifact/io.projectreactor/reactor-core
+	implementation 'io.projectreactor:reactor-core:3.5.6'
 	
 }
 
