서버 재가동 시 action이 in progress 상태에 갇히는 문제 해결

--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -107,5 +107,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd /home/ubuntu
-            sh deploy_devrun.sh
+            nohup sh deploy_devrun.sh &      
             echo "서비스 시작"
+            PID=$!
+            wait $PID
