--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,16 @@ repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
 	maven { url 'https://repo.spring.io/snapshot' }
+	// 아임포트 
+    maven { url 'https://jitpack.io' }
+	
 }
 
 dependencies {
+	//아임포트        
+	implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
+	
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1' // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
