--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -39,6 +39,9 @@ jobs:
           echo "" >> application.properties
           echo "kakao.client_id=${{ secrets.KAKAO_CLIENT_ID }}" >> application.properties
           echo "kakao.redirect_url=${{ secrets.KAKAO_REDIRECT_URL }}" >> application.properties
+          echo "iamport_KEY=${{ secrets.iamport_KEY }}" >> application.properties
+          echo "iamport_SECRET=${{ secrets.iamport_SECRET }}" >> application.properties
+
         working-directory : ./src/main/resources
         
       - name: Build and package with Gradle
