--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	// https://mvnrepository.com/artifact/io.projectreactor/reactor-core
 	implementation 'io.projectreactor:reactor-core:3.5.6'
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	// 스프링 시큐리티
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
 	
 }
 
