--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -42,7 +42,7 @@ jobs:
           echo "iamport_KEY=${{ secrets.iamport_KEY }}" >> application.properties
           echo "iamport_SECRET=${{ secrets.iamport_SECRET_KEY }}" >> application.properties
           echo "jwt.secretKey=${{ secrets.JWT_SECRET_KEY }}" >> application.properties
-          echo "spring.mvc.pathmatch.matching-strategy=${{ SWAGGER_PATHMATCH_OPTION }}" >> application.properties
+          echo "spring.mvc.pathmatch.matching-strategy=${{ secrets.SWAGGER_PATHMATCH_OPTION }}" >> application.properties
 
 
         working-directory : ./src/main/resources
