--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -41,7 +41,7 @@ jobs:
           echo "kakao.redirect_url=${{ secrets.KAKAO_REDIRECT_URL }}" >> application.properties
           echo "iamport_KEY=${{ secrets.iamport_KEY }}" >> application.properties
           echo "iamport_SECRET=${{ secrets.iamport_SECRET_KEY }}" >> application.properties
-          echo "jwt.secretKey=${{ secrets.JWT_SECRET_KEY }}" >> application.properties
+          echo "jwt.secretKey=${{ secrets.JWT_SECRETKEY }}" >> application.properties
           echo "spring.mvc.pathmatch.matching-strategy=${{ secrets.SWAGGER_PATHMATCH_OPTION }}" >> application.properties
 
 
