--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,24 @@ dependencies {
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	// https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
 	implementation 'org.hibernate:hibernate-validator:8.0.0.Final'
-
-
-	
+	//
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
+	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
+    implementation 'com.google.api-client:google-api-client:1.25.0'
+    implementation 'com.google.api-client:google-api-client-gson:1.25.0'
+	 implementation 'com.google.oauth-client:google-oauth-client-jetty:1.31.1'
+    implementation 'com.google.apis:google-api-services-gmail:v1-rev110-1.25.0'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    implementation 'javax.servlet:jstl:1.2'
+    compileOnly 'org.apache.tomcat.embed:tomcat-embed-jasper'
 }
 
 tasks.named('test') {
