--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 	implementation 'software.amazon.awssdk:sso'
 	implementation 'software.amazon.awssdk:ssooidc'
 	
+	// caffeine
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.2'
+	
 }
 
 tasks.named('test') {
