--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -62,6 +62,15 @@ jobs:
           echo "spring.servlet.multipart.max-request-size=1000MB" >> application.properties
           echo "" >> application.properties
           echo "ReCAPTCHA.secretKey=${{ secrets.RECAPTCHA_SECRETKEY }}" >> application.properties
+          echo "" >> application.properties
+          echo "spring.mail.host=${{ secrets.SPRING_MAIL_HOST }}" >> application.properties
+          echo "spring.mail.port=${{ secrets.SPRING_MAIL_PORT }}" >> application.properties
+          echo "spring.mail.username=${{ secrets.SPRING_MAIL_USERNAME }}" >> application.properties
+          echo "spring.mail.password=${{ secrets.SPRING_MAIL_PASSWORD }}" >> application.properties
+          echo "spring.mail.properties.mail.smtp.auth=true" >> application.properties
+          echo "spring.mail.properties.mail.smtp.starttls.enable=true" >> application.properties
+          echo "spring.mail.properties.mail.smtp.starttls.required=true" >> application.properties
+          
           
         working-directory : ./src/main/resources
         
