--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -70,6 +70,9 @@ jobs:
           echo "spring.mail.properties.mail.smtp.auth=true" >> application.properties
           echo "spring.mail.properties.mail.smtp.starttls.enable=true" >> application.properties
           echo "spring.mail.properties.mail.smtp.starttls.required=true" >> application.properties
+          echo "" >> application.properties
+          echo "logging.level.root=INFO" >> application.properties
+          echo "logging.file.name=${{ secrets.LOGGING_FILE_NAME }}" >> application.properties
           
           
         working-directory : ./src/main/resources
