--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -73,6 +73,9 @@ jobs:
           echo "" >> application.properties
           echo "logging.level.root=INFO" >> application.properties
           echo "logging.file.name=${{ secrets.LOGGING_FILE_NAME }}" >> application.properties
+          echo "" >> application.properties
+          echo "spring.security.oauth2.client.registration.google.client-id=${{ secrets.GOOGLE_CLIENT_ID }}" >> application.properties
+          echo "spring.security.oauth2.client.registration.google.client-secret=${{ secrets.GOOGLE_SECRET_KEY }}" >> application.properties
           
           
         working-directory : ./src/main/resources
