--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -76,7 +76,8 @@ jobs:
           echo "" >> application.properties
           echo "spring.security.oauth2.client.registration.google.client-id=${{ secrets.GOOGLE_CLIENT_ID }}" >> application.properties
           echo "spring.security.oauth2.client.registration.google.client-secret=${{ secrets.GOOGLE_SECRET_KEY }}" >> application.properties
-          
+          echo "" >> application.properties
+          echo "aes.secretkey=${{ secrets.AES_SECRET_KEY }}" >> application.properties
           
         working-directory : ./src/main/resources
         
