--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,11 @@ dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
-   testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+   testImplementation 'org.springframework.boot:spring-boot-starter-test'   
+   
+   
+   implementation 'org.springframework.boot:spring-boot-starter-actuator'
+   implementation 'io.micrometer:micrometer-registry-prometheus'
    // OAuth 2.0
    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
