--- a/.github/workflows/deploy-auto-action.yml
+++ b/.github/workflows/deploy-auto-action.yml
@@ -76,8 +76,8 @@ jobs:
           echo "logging.level.root=INFO" >> application.properties
           echo "logging.file.name=${{ secrets.LOGGING_FILE_NAME }}" >> application.properties
           echo "" >> application.properties
-          echo "spring.security.oauth2.client.registration.google.client-id=${{ secrets.GOOGLE_CLIENT_ID }}" >> application.properties
-          echo "spring.security.oauth2.client.registration.google.client-secret=${{ secrets.GOOGLE_SECRET_KEY }}" >> application.properties
+          echo "spring.security.oauth2.client.registration.google.client-id=${{ secrets.GOOGLE_CLIENT_ID_KSH }}" >> application.properties
+          echo "spring.security.oauth2.client.registration.google.client-secret=${{ secrets.GOOGLE_SECRET_KEY_KSH }}" >> application.properties
           echo "" >> application.properties
           echo "aes.secretKey=${{ secrets.AES_SECRET_KEY }}" >> application.properties
           
